RESOLVED FIXED206413
ASSERT in case a service worker cannot be terminated in a timely manner
https://bugs.webkit.org/show_bug.cgi?id=206413
Summary ASSERT in case a service worker cannot be terminated in a timely manner
youenn fablet
Reported 2020-01-17 07:29:41 PST
ASSERT in case a service worker cannot be terminated in a timely manner. This might help debugging test flakiness.
Attachments
Patch (1.66 KB, patch)
2020-01-17 07:36 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-01-17 07:36:09 PST
Alexey Proskuryakov
Comment 2 2020-01-17 23:24:55 PST
Comment on attachment 388038 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=388038&action=review > Source/WebCore/workers/service/context/SWContextManager.cpp:168 > + ASSERT_NOT_REACHED(); > _exit(EXIT_FAILURE); Builds passed on EWS, but I recall some ports failing to build because of unreachable code warnings in the past. Maybe they disabled the warning.
youenn fablet
Comment 3 2020-01-20 00:18:29 PST
(In reply to Alexey Proskuryakov from comment #2) > Comment on attachment 388038 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=388038&action=review > > > Source/WebCore/workers/service/context/SWContextManager.cpp:168 > > + ASSERT_NOT_REACHED(); > > _exit(EXIT_FAILURE); > > Builds passed on EWS, but I recall some ports failing to build because of > unreachable code warnings in the past. Maybe they disabled the warning. I remember hitting that issue on EWS. Either it has changed or the call to exit changes things?
youenn fablet
Comment 4 2020-01-20 00:18:56 PST
Will land it as is and will check webkit console.
WebKit Commit Bot
Comment 5 2020-01-20 01:02:44 PST
Comment on attachment 388038 [details] Patch Clearing flags on attachment: 388038 Committed r254812: <https://trac.webkit.org/changeset/254812>
WebKit Commit Bot
Comment 6 2020-01-20 01:02:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2020-01-20 01:03:15 PST
Alexey Proskuryakov
Comment 8 2020-01-22 14:19:44 PST
We are not hitting this assertion on tests where ServiceWorker process terminates unexpectedly.
Note You need to log in before you can comment on or make changes to this bug.