ASSERT in case a service worker cannot be terminated in a timely manner https://bugs.webkit.org/show_bug.cgi?id=206413

Reviewed by Alexey Proskuryakov.

No change of behavior, the process will still exit if it does not succeed in stopping a service worker.
In Debug, a crash log will be collected which will allow to help identifying other crashes.

* workers/service/context/SWContextManager.cpp:
(WebCore::SWContextManager::serviceWorkerFailedToTerminate):


Canonical link: https://commits.webkit.org/219550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254812 268f45cc-cd09-0410-ab3c-d52691b4dbfc