Source/WebCore/workers/service/context/SWContextManager.cpp
@@ -164,6 +164,7 @@ void SWContextManager::serviceWorkerFailedToTerminate(ServiceWorkerIdentifier se
 {
     UNUSED_PARAM(serviceWorkerIdentifier);
     RELEASE_LOG_ERROR(ServiceWorker, "Failed to terminate service worker with identifier %s, killing the service worker process", serviceWorkerIdentifier.loggingString().utf8().data());
+    ASSERT_NOT_REACHED();
     _exit(EXIT_FAILURE);
 }
 
